v1.1.1
- FIX: Page Header CSS on mobile.
- FIX: WooCommerce products grid margin CSS.
- FIX: Full screen mobile header drawer transition CSS.

v1.1.0
- NEW: "Scroll to Top" feature.
- NEW: "Color Palette" feature.
- NEW: Option(s) to change form input typography.
- NEW: Option(s) to enable / disable font smoothing.
- NEW: Option(s) to change full screen mobile header drawer position.
- NEW: Page Header drag & drop layout builder (replace the old layout option).
- NEW: Option(s) to change Page Header title text on post type archive page and taxonomy archive page.
- NEW: Breadcrumb integrations for [Rank Math](https://wordpress.org/plugins/seo-by-rank-math/).
- NEW: Breadcrumb integrations for [SEOPress](https://wordpress.org/plugins/wp-seopress/).
- NEW: Archive description is now automatically displayed on the archive page.
- NEW: Add new action hook `suki/frontend/before_primary_and_sidebar` and `suki/frontend/after_primary_and_sidebar`.
- NEW: Option(s) to change blog posts grid row gap.
- NEW: WooCommerce 2 columns layout for Cart page (configurable on Customizer).
- NEW: WooCommerce product's quantity input will automatically have minus (-) and plus (+) button.
- NEW: Option(s) to change WooCommerce products grid row gap.
- NEW: Add some new modules into the modules manager for Suki Pro v1.1.0.
- TWEAK: Improve frontend's general typography CSS for better readibility and accessibility.
- TWEAK: Improve Gutenberg CSS for new native blocks and styles.
- TWEAK: Improve dynamic CSS placement on frontend to allow Child Theme override the styles easier.
- TWEAK: Improve Header Builder: Allow header logo to be placed on all header sections.
- TWEAK: Improve Header Builder: Allow HTML header element to be placed on mobile header section.
- TWEAK: Page Header is now enabled by default (for fresh installation only).
- TWEAK: Improve WooCommerce cart and checkout page styles.
- TWEAK: Improve WooCommerce filter widgets styles.